--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -29,8 +29,14 @@
           <artifactId>license-maven-plugin</artifactId>
           <configuration>
             <includes>
+              <include>**/*.js</include>
               <include>cypress/**</include>
             </includes>
+            <excludes>
+              <exclude>node_modules/**</exclude>
+              <exclude>node/**</exclude>
+              <exclude>build/**</exclude>
+            </excludes>
           </configuration>
         </plugin>
       </plugins>
