--- a/orko-db-testsupport/pom.xml
+++ b/orko-db-testsupport/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.8.8</version>
+    <version>0.8.9-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
