--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,7 @@
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
 
+    <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
     <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
     <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
     <frontend-maven-plugin-version>1.6</frontend-maven-plugin-version>
@@ -446,7 +447,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>${maven.jar.plugin.version}</version>
           <configuration>
             <archive>
               <manifest>
