Adds support for basic bitmex limit trade submission, open orders and cancellation. Still do do: balance/position status, order history, order notification, and proper margin support, but the latter will be done alongside Bitfinex.

--- a/orko-app/heroku-config.yml
+++ b/orko-app/heroku-config.yml
@@ -37,6 +37,9 @@ exchanges:
   bitfinex:
     apiKey: ${BITFINEX_API_KEY:-}
     secretKey: ${BITFINEX_SECRET:-}
+  bitmex:
+    apiKey: ${BITMEX_API_KEY:-}
+    secretKey: ${BITMEX_SECRET:-}
   bittrex:
     apiKey: ${BITTREX_API_KEY:-}
     secretKey: ${BITTREX_SECRET:-}
