--- a/pom.xml
+++ b/pom.xml
@@ -182,11 +182,11 @@
     <guice.version>4.2.2</guice.version>
     <autovalue.version>1.6.2</autovalue.version>
     <dropwizard.version>1.3.7</dropwizard.version>
-    <xchange.version>4.3.13</xchange.version>
+    <xchange.version>4.3.14</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.3.11.orko.5</xchange.stream.version>
+    <xchange.stream.version>4.3.14.orko.1</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
@@ -362,6 +362,11 @@
         <version>1.3.2</version>
       </dependency>
 
+      <dependency>
+        <groupId>io.reactivex.rxjava2</groupId>
+        <artifactId>rxjava</artifactId>
+        <version>2.0.9</version>
+      </dependency>
       <dependency>
         <groupId>org.knowm.xchange</groupId>
         <artifactId>xchange-core</artifactId>
