--- a/pom.xml
+++ b/pom.xml
@@ -182,11 +182,14 @@
     <guice.version>4.2.2</guice.version>
     <autovalue.version>1.6.2</autovalue.version>
     <dropwizard.version>1.3.7</dropwizard.version>
-    <xchange.version>4.3.14</xchange.version>
+    
+    <!--<xchange.groupid>org.knowm.xchange</xchange.groupid>-->
+    <xchange.groupid>com.github.badgerwithagun.XChange</xchange.groupid>
+    <xchange.version>4.3.14.orko.2</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.3.14.orko.1</xchange.stream.version>
+    <xchange.stream.version>4.3.14.orko.3</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
@@ -368,47 +371,47 @@
         <version>2.0.9</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-core</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-binance</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-kucoin</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-coinbasepro</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-cryptopia</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-bitfinex</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-bittrex</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-bitmex</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.knowm.xchange</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-okcoin</artifactId>
         <version>${xchange.version}</version>
       </dependency>
