Beta Kraken support. Mark both this and bitmex as in beta

--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,11 @@
         <artifactId>xchange-okcoin</artifactId>
         <version>${xchange.version}</version>
       </dependency>
+      <dependency>
+        <groupId>${xchange.groupid}</groupId>
+        <artifactId>xchange-kraken</artifactId>
+        <version>${xchange.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
