Move dropwizard hibernate support into Apache licenced utility

--- a/orko-base/pom.xml
+++ b/orko-base/pom.xml
@@ -22,12 +22,12 @@
       <artifactId>dropwizard-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.dropwizard</groupId>
-      <artifactId>dropwizard-hibernate</artifactId>
+      <groupId>com.gruelbox</groupId>
+      <artifactId>dropwizard-guice-box</artifactId>
     </dependency>
     <dependency>
       <groupId>com.gruelbox</groupId>
-      <artifactId>dropwizard-guice-box</artifactId>
+      <artifactId>dropwizard-guice-box-hibernate</artifactId>
     </dependency>
 
     <dependency>
