--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,8 @@
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
+    
+    <dropwizard-guice-box-version>0.0.2-SNAPSHOT</dropwizard-guice-box-version>
 
     <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
     <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
@@ -217,7 +219,12 @@
       <dependency>
         <groupId>com.gruelbox</groupId>
         <artifactId>dropwizard-guice-box</artifactId>
-        <version>0.0.1</version>
+        <version>${dropwizard-guice-box-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gruelbox</groupId>
+        <artifactId>dropwizard-guice-box-hibernate</artifactId>
+        <version>${dropwizard-guice-box-version}</version>
       </dependency>
       <dependency>
         <groupId>org.tuckey</groupId>
