--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
     
-    <dropwizard-guice-box-version>0.0.2-SNAPSHOT</dropwizard-guice-box-version>
+    <dropwizard-guice-box-version>0.0.2</dropwizard-guice-box-version>
 
     <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
     <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
