Removing Cryptopia support for the time being due to ongoing hack investigation. Was making tests fail.

--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -133,10 +133,10 @@
       <groupId>${xchange.groupid}</groupId>
       <artifactId>xchange-kucoin</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>${xchange.groupid}</groupId>
       <artifactId>xchange-cryptopia</artifactId>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>${xchange.groupid}</groupId>
       <artifactId>xchange-bitfinex</artifactId>
