--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.3.14.orko-6</xchange.stream.version>
+    <xchange.stream.version>4.3.14.orko.7</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
