--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -123,7 +123,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>run cypress:run</arguments>
+              <arguments>DEBUG=cypress:* run cypress:run</arguments>
             </configuration>
           </execution>
         </executions>
