--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,6 @@
     </profile>
     <profile>
       <id>ci</id>
-      <modules>
-        <module>orko-ui</module>
-      </modules>
       <build>
         <plugins>
           <plugin>
@@ -209,6 +206,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <skip.surefire.tests>${skipTests}</skip.surefire.tests>
 
     <guice.version>4.2.2</guice.version>
     <autovalue.version>1.6.2</autovalue.version>
@@ -509,6 +507,13 @@
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               </manifest>
             </archive>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin-version}</version>
+          <configuration>
+            <skipTests>${skip.surefire.tests}</skipTests>
           </configuration>
         </plugin>
         <plugin>
