Use project.groupid in references between POMs

--- a/orko-auth/pom.xml
+++ b/orko-auth/pom.xml
@@ -18,13 +18,13 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.gruelbox</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>orko-base</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.gruelbox</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>orko-db-testsupport</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
