--- a/orko-db-testsupport/pom.xml
+++ b/orko-db-testsupport/pom.xml
@@ -18,7 +18,7 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.gruelbox</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>orko-base</artifactId>
       <version>${project.version}</version>
     </dependency>
