--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -21,7 +21,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.gruelbox</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>orko-common</artifactId>
       <version>${project.version}</version>
     </dependency>
