Tweak .travis.yml to perform Sonar analysis of pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ matrix:
     - if: repo = gruelbox/orko AND NOT branch = master AND NOT type = pull_request
       name: "JUnit tests, Spotbugs, Checkstyle and Sonar"
       script: mvn -B -U -Pci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.branch.name=$TRAVIS_BRANCH
-    - if: repo = gruelbox/orko AND head_repo = gruelbox/orko AND type = pull_request
+    - if: repo = gruelbox/orko AND type = pull_request
       name: "JUnit tests, Spotbugs, Checkstyle and Sonar"
       script: mvn -B -U -Pci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.pullrequest.provider=github sonar.pullrequest.github.repository=orko -Dsonar.pullrequest.key=$TRAVIS_PULL_REQUEST -Dsonar.pullrequest.branch=$TRAVIS_PULL_REQUEST_BRANCH -Dsonar.pullrequest.base=$TRAVIS_BRANCH
-    - if: (repo = gruelbox/orko AND NOT head_repo = gruelbox/orko AND type = pull_request) OR NOT repo = gruelbox/orko
+    - if: NOT repo = gruelbox/orko
       name: "JUnit tests, Spotbugs and Checkstyle"
       script: mvn -B -U clean test -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     - name: "MySQL tests"
